--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-    <link rel="stylesheet" href="all.css"
+    <link rel="stylesheet" href="all.css">
 </head>
 <body>
-
+    <h1>1234</h1>
 </body>
 </html>
